--- a/index.html
+++ b/index.html
@@ -78,14 +78,18 @@
         
         <ul class="nav navbar-nav navbar-right">
             <li >
-            <a href="index.html" class="redClass">Главная</a>
+            <a href="#top" class="redClass">Главная</a>
             </li>
 
 
      
 
             <li>
-            <a href="articles.html">Категории</a>
+            <a href="#s_1">Категории</a>
+            </li>
+
+             <li>
+            <a href="#s_2">Отзывы</a>
             </li>
 
             <li>
@@ -186,7 +190,7 @@
 
 
 
- <section  id="s_2" class="main_galery">
+ <section  id="s_1" class="main_galery">
 
     <div class="row-container">
       <div class="container-fluid">
@@ -401,7 +405,7 @@
         <div class="row-fluid">
 
             <div class="col-md-12">
-            <h2 class="titleWork">
+            <h2  class="titleWork">
                 Отзывы
             </h2>
             </div>
