--- a/articles.html
+++ b/articles.html
@@ -11,7 +11,7 @@
 	<title>Мебельер</title>
 	<meta name="description" content="">
 
-	<link rel="shortcut icon" href="img/favicon/faviconka_ru_343.png" type="image/x-icon">
+	<link rel="shortcut icon" href="img/favicon/faviconka_ru_1853.ico" type="image/x-icon">
 
 	<!-- <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
