--- a/upper_catalog.html
+++ b/upper_catalog.html
@@ -69,7 +69,7 @@
       
 
         <h3 class="heading-style-3 visible-first">
-          <span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Мебельер</span> 
+           <a href="index.html" style="text-decoration: none;"><span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Мебельер</span> </a>
 
         </h3>
 
@@ -147,6 +147,13 @@
         </div>
 
        <div class="col-md-8 col-sm-8">
+
+
+       <ul class="breadcrumb">
+         <li><a href="index.html">Главная</a></li>
+          <li><a href="catalog.html">Компьютерные столы</a></li>
+          <li class="active">Уголок школьника "Лотос"</li>
+      </ul>
 
        <h3 style="font-weight: bold;">Уголок школьник "Лотос"</h3>
 
