--- a/contacts.html
+++ b/contacts.html
@@ -70,7 +70,7 @@
       
 
         <h3 class="heading-style-3 visible-first">
-          <span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Мебельер</span> 
+          <a href="index.html" style="text-decoration: none;"><span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Мебельер</span> </a>
          <!--  <span class="item_title_part_1 item_title_part_even item_title_part_second_half item_title_part_last">Salon</span> -->
         </h3>
 
