--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       
 
         <h3 class="heading-style-3 visible-first">
-          <span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Мебельер</span> 
+          <a href="index.html" style="text-decoration: none;"><span class="item_title_part_0 item_title_part_odd item_title_part_first_half item_title_part_first">Мебельер</span> </a>
 
         </h3>
 
