--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
         <div class="col-md-4 col-sm-4 tell">
 
-             <p>ТЦ "ЛИДЕР" на 2ом этаже<br> тел.89525388834</p>
+             <p>ТЦ "ЛИДЕР" на 2ом этаже<br> тел. + 7(952)-538-88-34</p>
   
          
         
