--- a/upper_catalog.html
+++ b/upper_catalog.html
@@ -159,12 +159,14 @@
 
           <figure class="item_img">
             
+           <a class="test-popup-link" href="img/new/computer_tabel/1.jpg">
            <img src="img/new/computer_tabel/1.jpg" alt="pers1">
+           </a>
 
             <p style="margin-top: 15px;">ВхШхГ: 1872x2800x520<br>
             Корпус ЛДСП:венге + шимо светлый,<br>
             шимо тёсный + шимо светлый</p>
-
+            <a class="add_order" href="contacts.html">Заказать</a>
           </figure>
 
       </div>
