--- a/contacts.html
+++ b/contacts.html
@@ -127,7 +127,7 @@
         <div class="row-fluid">
 
             <div class="col-md-12">
-            <h2 class="titleWork">
+            <h2 class="titleWork" style="margin-bottom: 56px;">
                Как нас найти
             </h2>
             </div>
@@ -146,11 +146,18 @@
       <div class="row-fluid">
         <div class="col-md-6">
 
-        <h3>ТЦ "ЛИДЕР" на 2ом этаже</h3>
-        <h4>тел.89525388834</h4>
-          <!-- <p>ТЦ "ЛИДЕР" на 2ом этаже<br>
-          тел.89525388834</p> -->
+        <h1>ТЦ "ЛИДЕР" на 2ом этаже</h1>
+        <!-- <h4>тел.89525388834</h4> -->
+
+        
+
+         <ul style="font-size: 23px; margin-top: 20px;">
+           <li>тел. + 7(952)-538-88-34</li>
+           <li>mail: ...</li>
+
+         </ul>
         </div>
+
 
         <div class="col-md-6">
        <form action="http://formspree.io/agragregra@ya.ru" class="main_form" novalidate target="_blank" method="post">
