--- a/upper_catalog.html
+++ b/upper_catalog.html
@@ -162,10 +162,16 @@
            <a class="test-popup-link" href="img/new/computer_tabel/1.jpg">
            <img src="img/new/computer_tabel/1.jpg" alt="pers1">
            </a>
-
-            <p style="margin-top: 15px;">ВхШхГ: 1872x2800x520<br>
+            <p  style="font-weight: bold; margin-top: 15px;">
+              Характеристики
+            </p>
+            
+            <p style="margin-top: 15px;">
+            ВхШхГ: 1872x2800x520<br>
             Корпус ЛДСП:венге + шимо светлый,<br>
             шимо тёсный + шимо светлый</p>
+
+             
             <a class="add_order" href="contacts.html">Заказать</a>
           </figure>
 
@@ -187,7 +193,7 @@
    <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-md-4 col-sm-4">
-            <p>© «Модельер», 2016</p>
+            <p>© «Мебелье», 2016</p>
         </div>
 
        <div class="col-md-4 col-sm-4">
