--- a/articles.html
+++ b/articles.html
@@ -198,7 +198,7 @@
    <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-md-4 col-sm-4">
-            <p>© «Модельер», 2016</p>
+            <p>© «Мебелье», 2016</p>
         </div>
 
        <div class="col-md-4 col-sm-4">
@@ -211,8 +211,6 @@
         <div class="col-md-4 col-sm-4 tell">
 
              <p>ТЦ "ЛИДЕР" на 2ом этаже<br> тел.89525388834</p>
-  
-         
         
         </div>
       </div>
