--- a/catalog.html
+++ b/catalog.html
@@ -243,7 +243,7 @@
    <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-md-4 col-sm-4">
-            <p>© «Модельер», 2016</p>
+            <p>© «Мебелье», 2016</p>
         </div>
 
        <div class="col-md-4 col-sm-4">
