--- a/catalog.html
+++ b/catalog.html
@@ -255,7 +255,9 @@
 
         <div class="col-md-4 col-sm-4 tell">
 
-             <p>ТЦ "ЛИДЕР" на 2ом этаже<br> тел.89525388834</p>
+             <p>
+              ТЦ "ЛИДЕР" на 2ом этаже<br /> тел. + 7(952)-538-88-34 <br /> mebelier67@mail.ru
+             </p>
   
          
         
