--- a/contacts.html
+++ b/contacts.html
@@ -131,7 +131,7 @@
 
             <div class="col-md-12">
             <h2 class="titleWork" style="margin-bottom: 56px;">
-               Как нас найти
+               Свяжитесь с нами
             </h2>
             </div>
         </div>
@@ -156,7 +156,7 @@
 
          <ul style="font-size: 23px; margin-top: 20px;">
            <li>тел. + 7(952)-538-88-34</li>
-           <li>mail: ...</li>
+           <li>mail: mebelier67@mail.ru</li>
 
          </ul>
         </div>
@@ -240,7 +240,9 @@
 
         <div class="col-md-4 col-sm-4 tell">
 
-             <p>ТЦ "ЛИДЕР" на 2ом этаже<br> тел. + 7(952)-538-88-34</p>
+              <p>
+              ТЦ "ЛИДЕР" на 2ом этаже<br /> тел. + 7(952)-538-88-34 <br /> mebelier67@mail.ru
+             </p>
   
          
         
